--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,9 +31,9 @@
 	
 <div class="container">
 
-<a href="#"><button type="button" class="btn btn-primary mb-3">Adicionar usuário</button></a>
+<a href="form.html"><button type="button" class="btn btn-primary mb-3">Adicionar usuário</button></a>
 
-	<table class="table">
+	<table class="table table-bordered">
   <thead>
     <tr>
       <th scope="col">ID</th>
